<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jeckyll86.xenont.myhome.frontend.fragment.SensorSummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/myBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/temp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="26dp"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textSize="40dp"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/text_temp_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="C°"
                    android:textSize="40dp"
                    android:gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/lightBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textSize="26dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="--"
                android:textSize="40dp"
                android:textColor="@android:color/black" />

        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/airQuality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/air_1x" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_quality"
                android:textSize="26dp"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_Air_Aquality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="--"
                    android:textSize="40dp"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="PPM: "
                        android:textSize="30dp"
                        android:alpha="100"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/text_ppm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="--"
                        android:textSize="30dp"
                        android:alpha="100"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text_Air_Aquality_human_readable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text=""
                    android:textSize="35dp" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/flat_camera_icon" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="26dp"
                android:textColor="@android:color/black" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
